# OMCompiler

./: .gitignore  Makefile.common  Makefile.in  Makefile.omdev.mingw  Makefile.omsi.common  configure.ac
Compiler/BackEnd/: BackendDAE.mo  BackendDAECreate.mo  BackendDump.mo  BackendVariable.mo  ExpressionSolve.mo  HpcOmMemory.mo  HpcOmScheduler.mo  Initialization.mo  SymbolicJacobian.mo
Compiler/FrontEnd/: ComponentReference.mo
Compiler/Script/: CevalScript.mo  CevalScriptBackend.mo
Compiler/SimCode/: SerializeInitXML.mo  SimCode.mo  SimCodeFunction.mo  SimCodeMain.mo  SimCodeUtil.mo
Compiler/Stubs/: SimCodeUtil.mo
Compiler/Template/: CodegenCFunctions.tpl  CodegenCpp.tpl  CodegenCppCommon.tpl  CodegenEquations.tpl  CodegenFMUCommon.tpl  CodegenFMUCpp.tpl  CodegenOMSIC.tpl  CodegenOMSIC_Equations.tpl  CodegenOMSICpp.tpl  CodegenOMSI_common.tpl  CodegenUtil.tpl  CodegenUtilSimulation.tpl  Makefile.common  SimCodeTV.mo
Compiler/Util/: Flags.mo  HashTableCrefSimVar.mo  HashTableCrefSimVarDep.mo
Compiler/boot/: LoadCompilerSources.mos
Compiler/susan_codegen/doc/: Susan_TODO.txt
SimulationRuntime/: DoxyfileSimulationRuntime
SimulationRuntime/OMSI/: CMakeLists.txt  Makefile.omdev.mingw
SimulationRuntime/OMSI/base/: CMakeLists.txt
SimulationRuntime/OMSI/base/include/: omis_input_model_variables.h  omsi_event_helper.h  omsi_global.h  omsi_initialization.h  omsi_input_json.h  omsi_input_model_variables.h  omsi_input_sim_data.h  omsi_input_xml.h  omsi_mmap.h  omsi_posix_func.h  omsi_solve_alg_system.h  omsi_utils.h  omsu_input_json.h  omsu_input_sim_data.h  omsu_input_xml.h  omsu_mmap.h  uthash.h
SimulationRuntime/OMSI/base/src/: omsi_event_helper.c  omsi_initialization.c  omsi_input_json.c  omsi_input_model_variables.c  omsi_input_sim_data.c  omsi_input_xml.c  omsi_mmap.c  omsi_posix_func.c  omsi_solve_alg_system.c  omsi_utils.c  omsu_input_json.c  omsu_input_sim_data.c  omsu_input_xml.c  omsu_mmap.c
SimulationRuntime/OMSI/include/: omsi.h  omsi_api_functions.h  omsi_callbacks.h  omsi_eqns_system.c  omsi_eqns_system.h  omsi_jacobian.h  omsi_me.h
SimulationRuntime/OMSI/solver/: CMakeLists.txt
SimulationRuntime/OMSI/solver/include/: omsi_solver.h  solver_api.h  solver_global.h  solver_helper.h  solver_kinsol.h  solver_lapack.h  solver_newton.h
SimulationRuntime/OMSI/solver/src/: solver_api.c  solver_helper.c  solver_kinsol.c  solver_lapack.c  solver_newton.c
SimulationRuntime/OMSI/src/: CMakeLists.txt
SimulationRuntime/OMSIC/: .cproject  CMakeLists.txt  Makefile.omdev.mingw  README.txt  makefile  makefile_old
SimulationRuntime/OMSIC/include/: omsic.h
SimulationRuntime/OMSIC/include/Solver/: Lapack.h  Newton.h  TotalPivot.h  TotalPivot_Interface.h  newtonIteration.h
SimulationRuntime/OMSIC/include/fmi2/: osi_fmi2_wrapper.h
SimulationRuntime/OMSIC/include/math/: omsi_math.h  omsi_matrix.h  omsi_vector.h
SimulationRuntime/OMSIC/include/omsu/: omsu_ContinuousSimulation.h  omsu_EventSimulation.h  omsu_GettersAndSetters.h  omsu_Initialization.h  omsu_common.h  omsu_continuous_simulation.h  omsu_event_simulation.h  omsu_getters_and_setters.h  omsu_helper.h  omsu_initialization.h  omsu_input_json.h  omsu_input_xml.h  omsu_me.h  omsu_mmap.h  omsu_utils.h
SimulationRuntime/OMSIC/include/solver/: Newton.h  TotalPivot_Interface.h  lapack.h  newtonIteration.h  solver_helper.h  solver_lapack.h
SimulationRuntime/OMSIC/src/Solver/Homotopy/: Homotopy.c
SimulationRuntime/OMSIC/src/Solver/Lapack/: Lapack.c
SimulationRuntime/OMSIC/src/Solver/Newton/: Newton.c
SimulationRuntime/OMSIC/src/Solver/TotalPivot/: TotalPivot.c
SimulationRuntime/OMSIC/src/Solver/omsi_math/: omsi_matrix.c  omsi_vector.c
SimulationRuntime/OMSIC/src/fmi2/: omsi_fmi2_wrapper.c  osi_fmi2_wrapper.c
SimulationRuntime/OMSIC/src/fmi2/detail/: osi_fmi2_log.cpp  osi_fmi2_log.h  osi_fmi2_settings.h  osi_osu_wrapper.h
SimulationRuntime/OMSIC/src/omsu/: CMakeLists.txt  makefile  omsu_ContinuousSimulation.c  omsu_EventSimulation.c  omsu_GettersAndSetters.c  omsu_Initialization.c  omsu_common.c  omsu_continuous_simulation.c  omsu_event_simulation.c  omsu_getters_and_setters.c  omsu_helper.c  omsu_initialization.c  omsu_input_json.c  omsu_input_xml.c  omsu_me.c  omsu_mmap.c  omsu_utils.c
SimulationRuntime/OMSIC/src/solver/: CMakeLists.txt  makefile  solver_helper.c
SimulationRuntime/OMSIC/src/solver/Homotopy/: Homotopy.c
SimulationRuntime/OMSIC/src/solver/Kinsol/: Kinsol.c
SimulationRuntime/OMSIC/src/solver/Klu/: Klu.c
SimulationRuntime/OMSIC/src/solver/Lapack/: Lapack.c
SimulationRuntime/OMSIC/src/solver/Newton/: Newton.c  newtonIteration.c
SimulationRuntime/OMSIC/src/solver/SolverHybrd/: nonlinearSolverHybrd.c
SimulationRuntime/OMSIC/src/solver/TotalPivot/: TotalPivot.c  TotalPivot_Interface.c
SimulationRuntime/OMSIC/src/solver/lapack/: lapack.c  solver_lapack.c
SimulationRuntime/OMSIC/testsuite/: SimpleModelLinear_1_init.xml  makefile  modelDescription.xml  problem2_info.json  problem2_init.xml  test_omsu_main.c  test_solver_main.c  test_xml.c
SimulationRuntime/OMSICpp/: CMakeLists.txt  CMakeSettings.json  Makefile.env.in  Makefile.omdev.mingw
SimulationRuntime/OMSICpp/CMake/: PrecompiledHeader.cmake
SimulationRuntime/OMSICpp/omsi/: CMakeLists.txt
SimulationRuntime/OMSICpp/omsi/include/: omsi_global_settings.h
SimulationRuntime/OMSICpp/omsi/src/: omsi.cpp  omsi_factory.cpp  omsi_global_settings.cpp
SimulationRuntime/c/: simulation_data.h
SimulationRuntime/c/omsi/: makefile  omsu_ContinuousSimulation.c  omsu_ContinuousSimulation.h  omsu_EventSimulation.c  omsu_EventSimulation.h  omsu_GettersAndSetters.c  omsu_GettersAndSetters.h  omsu_Initialization.c  omsu_Initialization.h  omsu_common.c  omsu_common.h  omsu_helper.c  omsu_helper.h  omsu_me.c  omsu_me.h  omsu_utils.c  omsu_utils.h
SimulationRuntime/c/omsi/fmi2/: osi_fmi2_wrapper.c  osi_fmi2_wrapper.h
SimulationRuntime/c/omsi/testsuite/: SimpleModelLinear_1_info.json  test_omsu_main.c  (+1 more)
SimulationRuntime/cpp/: CMakeLists.txt  Makefile.omdev.mingw
SimulationRuntime/cpp/omsi/: CMakeLists.txt
(+118 files in other folders)
